--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ buildNumber.properties
 !/.mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/maven,macos,intellij
+**/*/*.zip
